--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -7,6 +7,7 @@
     "connected-react-router": "6.5.2",
     "history": "4.10.1",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.21",
     "merge": "1.2.1",
     "popper.js": "^1.16.0",
     "postcss": "^8.4.5",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@types/history": "4.7.3",
     "@types/jest": "24.0.19",
+    "@types/lodash": "^4.14.178",
     "@types/node": "12.11.6",
     "@types/react": "16.9.9",
     "@types/react-dom": "16.9.2",
