--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.3.1",
     "connected-react-router": "6.5.2",
     "history": "4.10.1",
+    "i18next": "^21.6.7",
     "jquery": "^3.5.1",
     "lodash": "^4.17.21",
     "merge": "1.2.1",
@@ -14,6 +15,7 @@
     "postcss-cli": "^9.1.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-i18next": "^11.15.3",
     "react-redux": "7.1.1",
     "react-router": "5.1.2",
     "react-router-dom": "5.1.2",
