--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -11,6 +11,7 @@
     "lodash": "^4.17.21",
     "merge": "1.2.1",
     "mobx": "^6.3.13",
+    "mobx-react": "^7.2.1",
     "popper.js": "^1.16.0",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
